Agregue filtros falta pais ocupacion
