# src/main/java/mx/gob/oadprs/sicosel/model/ConsultaSentenciado_.java
@@ -1,0 +1,19 @@
+package mx.gob.oadprs.sicosel.model;
+
+import javax.persistence.metamodel.SingularAttribute;
+import javax.persistence.metamodel.StaticMetamodel;
+
+@StaticMetamodel(ConsultaSentenciado.class)
+public class ConsultaSentenciado_ {
+    public static volatile SingularAttribute<ConsultaSentenciado, String> nombre;
+    public static volatile SingularAttribute<ConsultaSentenciado, String> apellidoPaterno;
+    public static volatile SingularAttribute<ConsultaSentenciado, String> apellidoMaterno;
+    public static volatile SingularAttribute<ConsultaSentenciado, String> alias;
+    public static volatile SingularAttribute<ConsultaSentenciado, String> otrosNombres;
+    public static volatile SingularAttribute<ConsultaSentenciado, String> nombrePadres;
+    public static volatile SingularAttribute<ConsultaSentenciado, String> apellidoPaternoPadres;
+    public static volatile SingularAttribute<ConsultaSentenciado, String> apellidoMaternoPadres;
+    public static volatile SingularAttribute<ConsultaSentenciado, Long> paisId;
+    public static volatile SingularAttribute<ConsultaSentenciado, Long> ocupacionId;
+
+}
